# yolo_ros

./: simple_detect.py  train.py
my_dataset/: robocon.yaml
my_dataset/labels/: train.cache  val.cache
my_dataset/labels/train/: IMG_20260317_171205.txt  IMG_20260317_171257.txt  IMG_20260317_171258.txt  IMG_20260317_171300.txt  IMG_20260317_171308.txt  IMG_20260317_171321.txt  IMG_20260317_171331.txt  IMG_20260317_171339.txt  IMG_20260317_171406.txt  IMG_20260317_171410.txt  IMG_20260317_171415.txt  IMG_20260317_171422.txt  IMG_20260317_171426.txt  IMG_20260317_171432.txt  IMG_20260317_171439.txt  IMG_20260317_171455.txt  IMG_20260317_171511.txt  IMG_20260317_171545.txt  IMG_20260317_171550.txt  IMG_20260317_171637.txt  IMG_20260317_171701.txt  IMG_20260317_171802.txt  IMG_20260317_171804.txt  IMG_20260317_171804_1.txt  IMG_20260317_171805.txt  IMG_20260317_171805_1.txt  IMG_20260317_172004.txt  IMG_20260317_172009.txt  IMG_20260317_172009_1.txt  IMG_20260317_172010.txt  IMG_20260317_172010_2.txt  IMG_20260317_172010_3.txt  IMG_20260317_172011.txt  IMG_20260317_172011_2.txt  IMG_20260317_172012.txt  IMG_20260317_172012_1.txt  IMG_20260317_172012_2.txt  IMG_20260317_172013.txt  IMG_20260317_172013_1.txt  IMG_20260317_172013_2.txt  (+81 more)
my_dataset/labels/val/: IMG_20260317_171202.txt  IMG_20260317_171207.txt  (+28 more)
src/coordination_interfaces/: CMakeLists.txt  package.xml
src/robot_coordination/: CMakeLists.txt  package.xml
src/robot_coordination/launch/: coordination_launch.py
src/robot_coordination/src/: center_node.cpp  detector_node.cpp  executor_node.cpp
(+5 files in other folders)
